--- a/app/src/main/res/layout/item_detailgv.xml
+++ b/app/src/main/res/layout/item_detailgv.xml
@@ -18,7 +18,7 @@
         android:textStyle="bold"
         android:textSize="22sp"
         android:layout_marginTop="10dp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         />
     <TextView
         android:id="@+id/item_dg_tv_price"
@@ -28,22 +28,15 @@
         android:textSize="16sp"
         android:textStyle="bold"
         android:layout_below="@id/item_dg_tv_title"
-        android:layout_alignLeft="@id/item_dg_tv_title"
+        android:layout_alignStart="@id/item_dg_tv_title"
         android:text="$ 18" />
-    <com.animee.rf_week02.view.AmountView
-        android:id="@+id/item_dg_av"
-        android:layout_width="110dp"
-        android:layout_height="40dp"
-        android:layout_alignLeft="@id/item_dg_tv_title"
-        android:layout_below="@id/item_dg_tv_price"
-        />
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/item_dg_btn_buy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/bg_btn"
-        android:text="购买"
+        android:text="@string/addcart"
         android:textColor="@color/white"
-        android:layout_alignParentRight="true"
-        android:layout_alignBottom="@id/item_dg_av"/>
+        android:layout_alignParentEnd="true"
+        android:layout_alignBottom="@id/item_dg_tv_price"/>
 </RelativeLayout>
