--- a/app/src/main/res/layout/activity_pay.xml
+++ b/app/src/main/res/layout/activity_pay.xml
@@ -56,7 +56,7 @@
             android:layout_marginTop="2sp"
             android:layout_toEndOf="@id/pay_tv1"
             android:background="@color/white"
-            android:text="东啊東"
+            android:text=""
             android:textColor="@color/darkgrey"
             android:textSize="17sp" />
 
@@ -79,7 +79,7 @@
             android:layout_marginTop="2sp"
             android:layout_toEndOf="@id/pay_tv2"
             android:background="@color/white"
-            android:text="13549848916"
+            android:text=""
             android:textColor="@color/darkgrey"
             android:textSize="17sp" />
     </RelativeLayout>
@@ -121,7 +121,7 @@
             android:layout_marginTop="2sp"
             android:layout_toEndOf="@id/pay_tv3"
             android:background="@color/white"
-            android:text="成都市"
+            android:text=""
             android:textColor="@color/darkgrey"
             android:textSize="17sp" />
     </RelativeLayout>
@@ -153,7 +153,7 @@
             android:layout_marginTop="2sp"
             android:layout_toEndOf="@id/pay_tv4"
             android:background="@color/white"
-            android:text="2.3"
+            android:text=""
             android:textColor="@color/darkgrey"
             android:textSize="17sp" />
 
@@ -175,7 +175,7 @@
             android:layout_marginTop="2sp"
             android:layout_toEndOf="@id/pay_tv5"
             android:background="@color/white"
-            android:text="50.21"
+            android:text=""
             android:textColor="@color/darkgrey"
             android:textSize="17sp" />
     </RelativeLayout>
