--- a/app/src/main/res/layout/item_detaillv.xml
+++ b/app/src/main/res/layout/item_detaillv.xml
@@ -35,7 +35,7 @@
         android:layout_width="110sp"
         android:layout_height="40sp"
         android:layout_below="@id/item_dl_tv_type"
-        android:layout_alignLeft="@id/item_dl_tv_title"
+        android:layout_alignStart="@id/item_dl_tv_title"
         android:layout_marginTop="10dp" />
 
     <TextView
@@ -44,7 +44,7 @@
         android:layout_height="wrap_content"
         android:text="$12"
         android:layout_below="@id/item_dl_av"
-        android:layout_alignLeft="@id/item_dl_tv_title"
+        android:layout_alignStart="@id/item_dl_tv_title"
         android:textColor="@color/red"
         android:textStyle="bold"
         android:layout_marginTop="10dp"
@@ -54,10 +54,10 @@
         android:id="@+id/item_dl_btn_buy"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="加入购物车"
+        android:text="@string/addcart"
         android:textColor="@color/white"
         android:textStyle="bold"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:background="@drawable/bg_btn"
         android:layout_alignBottom="@id/item_dl_iv" />
 
@@ -65,7 +65,7 @@
         android:id="@+id/item_dl_iv_del"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
         android:src="@mipmap/icon_laji"
         android:visibility="gone"
