fixed some Bugs

--- a/app/src/main/res/layout/item_detailgv.xml
+++ b/app/src/main/res/layout/item_detailgv.xml
@@ -38,5 +38,5 @@
         android:text="@string/addcart"
         android:textColor="@color/white"
         android:layout_alignParentEnd="true"
-        android:layout_alignBottom="@id/item_dg_tv_price"/>
+        android:layout_alignTop="@id/item_dg_tv_price"/>
 </RelativeLayout>
